// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/Badge Info 1`] = `
<span
  className="fr-badge fr-badge--info "
>
  Info
</span>
`;

exports[`Storyshots ui/shared/Badge Success 1`] = `
<span
  className="fr-badge fr-badge--success "
>
  Succès
</span>
`;
